--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Hello Twin</h1>
@@ -13,5 +14,12 @@
       <input type="text" name="name" />
       <button type="submit">Submit</button>
     </form>
+
+    <video id="videoPlayer" controls autoplay muted loop>
+      <source src="SATA ANAGI.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+
+    <script src="scripts.js"></script>
   </body>
 </html>
